--- a/Ritual.Booking.Web/Web.config
+++ b/Ritual.Booking.Web/Web.config
@@ -10,7 +10,7 @@
   </configSections>
   <connectionStrings>
     <add name="RitualDBEntities" connectionString="metadata=res://*/Entities.csdl|res://*/Entities.ssdl|res://*/Entities.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=Hyperion;initial catalog=RitualDB;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;AttachDbFilename=|DataDirectory|\aspnet-Ritual.Booking.Web-20141217075519.mdf;Initial Catalog=aspnet-Ritual.Booking.Web-20141217075519;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <add name="DefaultConnection" connectionString="Integrated Security=SSPI;Persist Security Info=False;Initial Catalog=RitualDB;Data Source=Hyperion" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
@@ -21,7 +21,7 @@
   <system.web>
     <authentication mode="None" />
     <compilation debug="true" targetFramework="4.5" />
-    <httpRuntime targetFramework="4.5" />
+    <httpRuntime targetFramework="4.5" />  
   </system.web>
   <system.webServer>
     <modules>
