--- a/Ritual.Booking.Data/Ritual.Booking.Data.csproj
+++ b/Ritual.Booking.Data/Ritual.Booking.Data.csproj
@@ -91,6 +91,9 @@
     <Compile Include="Package.cs">
       <DependentUpon>Entities.tt</DependentUpon>
     </Compile>
+    <Compile Include="PackageLocationPrice.cs">
+      <DependentUpon>Entities.tt</DependentUpon>
+    </Compile>
     <Compile Include="PartialClasses.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="QuarterlyAssessment.cs">
