we can remove these changes yes??  can we just discard? yes

--- a/Ritual.Booking.Data/Ritual.Booking.Data.csproj
+++ b/Ritual.Booking.Data/Ritual.Booking.Data.csproj
@@ -150,6 +150,7 @@
     <None Include="Scripts\ritualdb-schema.sql" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Scripts\BookingScreenAvailabilityQuery.sql" />
     <Content Include="Scripts\data.sql" />
     <Content Include="Scripts\membership.sql" />
   </ItemGroup>
