--- a/Ritual.Booking.Data/Ritual.Booking.Data.csproj
+++ b/Ritual.Booking.Data/Ritual.Booking.Data.csproj
@@ -48,7 +48,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AspNetRole.cs">
+      <DependentUpon>Entities.tt</DependentUpon>
+    </Compile>
     <Compile Include="AspNetUser.cs">
+      <DependentUpon>Entities.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Employee.cs">
       <DependentUpon>Entities.tt</DependentUpon>
     </Compile>
     <Compile Include="Entities.Context.cs">
@@ -108,7 +114,7 @@
     <Compile Include="Partials\Member.cs" />
     <Compile Include="Partials\OpeningHour.cs" />
     <Compile Include="Partials\QuarterlyAssessment.cs" />
-    <Compile Include="Partials\Trainer.cs" />
+    <Compile Include="Partials\Employee.cs" />
     <Compile Include="Partials\TrainingZone.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="QuarterlyAssessment.cs">
@@ -121,9 +127,6 @@
       <DependentUpon>Entities.tt</DependentUpon>
     </Compile>
     <Compile Include="TimeSlot.cs">
-      <DependentUpon>Entities.tt</DependentUpon>
-    </Compile>
-    <Compile Include="Trainer.cs">
       <DependentUpon>Entities.tt</DependentUpon>
     </Compile>
   </ItemGroup>
