--- a/Ritual.Booking.Web/Ritual.Booking.Web.csproj
+++ b/Ritual.Booking.Web/Ritual.Booking.Web.csproj
@@ -381,10 +381,10 @@
     <Content Include="Views\Shared\_Foundation.cshtml" />
     <Content Include="Views\Home\Foundation_Index.cshtml" />
     <Content Include="Views\TrainingZone\MyAssessments.cshtml" />
-    <Content Include="Views\OpeningHours\Create.cshtml" />
-    <Content Include="Views\OpeningHours\Delete.cshtml" />
-    <Content Include="Views\OpeningHours\Details.cshtml" />
-    <Content Include="Views\OpeningHours\Edit.cshtml" />
+    <Content Include="Views\OpeningHours\CreateOpeningHour.cshtml" />
+    <Content Include="Views\OpeningHours\DeleteOpeningHour.cshtml" />
+    <Content Include="Views\OpeningHours\DetailsOpeningHour.cshtml" />
+    <Content Include="Views\OpeningHours\EditOpeningHour.cshtml" />
     <Content Include="Views\OpeningHours\Index.cshtml" />
     <Content Include="Views\OpeningHourOverrides\Create.cshtml" />
     <Content Include="Views\OpeningHourOverrides\Delete.cshtml" />
@@ -409,6 +409,10 @@
     <Content Include="Views\FrontOfHouse\fuelbar.cshtml" />
     <Content Include="Views\FrontOfHouse\feedback.cshtml" />
     <Content Include="Views\Memberships\Suspend.cshtml" />
+    <Content Include="Views\Locations\CreateOpeningHour.cshtml" />
+    <Content Include="Views\Locations\DeleteOpeningHour.cshtml" />
+    <Content Include="Views\Locations\DetailsOpeningHour.cshtml" />
+    <Content Include="Views\Locations\EditOpeningHour.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
