--- a/Ritual.Booking.Web/packages.config
+++ b/Ritual.Booking.Web/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="Antlr" version="3.4.1.9004" targetFramework="net45" />
   <package id="bootstrap" version="3.0.0" targetFramework="net45" />
+  <package id="Chart.js" version="1.0.1" targetFramework="net45" />
   <package id="EntityFramework" version="6.1.1" targetFramework="net45" />
   <package id="Foundation4.Core" version="4.3.1" targetFramework="net45" />
   <package id="Foundation4.MVC4" version="1.0.431" targetFramework="net45" />
