--- a/Ritual.Web.Members/Ritual.Web.Members.csproj
+++ b/Ritual.Web.Members/Ritual.Web.Members.csproj
@@ -578,6 +578,7 @@
     <Content Include="Views\MyRitual\EditProfile.cshtml" />
     <Content Include="Views\MyRitual\UploadPhoto.cshtml" />
     <Content Include="Views\MyRitual\_UploadPhoto.cshtml" />
+    <Content Include="Views\MyRitual\SuspendMembership.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
