--- a/Ritual.Data/Ritual.Data.csproj
+++ b/Ritual.Data/Ritual.Data.csproj
@@ -153,7 +153,7 @@
     <Compile Include="Partials\Employee.cs" />
     <Compile Include="Partials\TimeSlot.cs" />
     <Compile Include="Partials\TrainingZone.cs" />
-    <Compile Include="PaymentCategory.cs">
+    <Compile Include="PaymentHoliday.cs">
       <DependentUpon>Entities.tt</DependentUpon>
     </Compile>
     <Compile Include="PaymentSchedule.cs">
